Add: reservas anfitrion y estados
